--- a/index.html
+++ b/index.html
@@ -30,35 +30,35 @@
                     Responsive Web Design Projects Pool
                 </h1>
                 <span class="buttons is-centered">
-                    <a href="https://omik-fcc.github.io/fcc-rwdp/fcc-tribute-page/" class="button is-white is-medium is-outlined"
+                    <a href="https://omik-fcc.github.io/fcc-tribute-page/" class="button is-white is-medium is-outlined"
                         target="_blank">
                         <span class="icon is-medium">
                             <i class="fa fa-microphone-alt"></i>
                         </span>
                         <span>Tribute Page</span>
                     </a>
-                    <a href="https://omik-fcc.github.io/fcc-rwdp/fcc-survey-form/" class="button is-white is-medium is-outlined"
+                    <a href="https://omik-fcc.github.io/fcc-survey-form/" class="button is-white is-medium is-outlined"
                         target="_blank">
                         <span class="icon is-medium">
                             <i class="fa fa-envelope-open-text"></i>
                         </span>
                         <span>Survey Form</span>
                     </a>
-                    <a href="https://omik-fcc.github.io/fcc-rwdp/fcc-landing-page/" class="button is-white is-medium is-outlined"
+                    <a href="https://omik-fcc.github.io/fcc-landing-page/" class="button is-white is-medium is-outlined"
                         target="_blank">
                         <span class="icon is-medium">
                             <i class="fa fa-code"></i>
                         </span>
                         <span>Landing Page</span>
                     </a>
-                    <a href="https://omik-fcc.github.io/fcc-rwdp/fcc-tech-doc/" class="button is-white is-medium is-outlined"
+                    <a href="https://omik-fcc.github.io/fcc-tech-doc/" class="button is-white is-medium is-outlined"
                         target="_blank">
                         <span class="icon is-medium">
                             <i class="fa fa-file-alt"></i>
                         </span>
                         <span>Technical Doc</span>
                     </a>
-                    <a href="https://omik-fcc.github.io/fcc-rwdp/fcc-portfolio/" class="button is-white is-medium is-outlined"
+                    <a href="https://omik-fcc.github.io/fcc-portfolio/" class="button is-white is-medium is-outlined"
                     target="_blank">
                     <span class="icon is-medium">
                         <i class="fas fa-images"></i>
