adding all projects

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
               <a href="https://github.com/omik-fcc/fcc-file-metadata" class="button is-light is-fullwidth" target="_blank">
                 
-                  <i class="fab fa-html5"></i>
+                  <i class="fas fa-server"></i>
                   <i class="fab fa-js"></i>
                 
                 <span>File Metadata</span>
